src/components/css-components/z-scrollbar/styles.css
/* Webkit Scrollbar */
.z-scrollbar::-webkit-scrollbar {
  width: 6px;
  background: linear-gradient(to right, transparent 0 1px, var(--gray200) 1px 5px, transparent 5px 6px);
}

.z-scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--color-primary01);
}

.z-scrollbar::-webkit-scrollbar-thumb:hover {
  background-color: var(--color-hover-primary);
}

:host([theme="dark"]) .z-scrollbar,
.z-scrollbar--dark {
  --z-scrollbar-track-gradient: linear-gradient(
    to right,
    transparent 0 1px,
    var(--gray600) 1px 5px,
    transparent 5px 6px
  );
  --z-scrollbar-track-color: var(--gray600);
  --z-scrollbar-thumb-color: var(--color-primary03);
  --z-scrollbar-thumb-hover-color: var(--color-hover-primary);
  --z-scrollbar-corner-color: transparent;
}

/* Firefox scrollbar */
@supports not selector(.z-scrollbar::-webkit-scrollbar-track) {
  .z-scrollbar {
    scrollbar-color: var(--color-primary01) transparent;
  }
}

